--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,3 +1,8 @@
-.Logo img {
-    height: 70px;
-}
+.Logo {
+    display: flex;
+    align-items: center;
+  }
+  .Logo img {
+    height: 30px;
+    margin-right: .5rem;
+  }
