--- a/src/components/Layout/Toolbar/Toolbar.module.css
+++ b/src/components/Layout/Toolbar/Toolbar.module.css
@@ -1,15 +1,18 @@
 .Toolbar {
-    display: flex;
-    justify-content: space-between;
-    
-    color: white;
-    background-color: tomato;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    position: sticky;
-    top: 0;
-    left: 0;
-  }
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  left: 0;
 
-.Toolbar img {
-    height: 70px;
+  font-size: 2rem;
+  color: white;
+  background-color: tomato;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+}
+
+@media (max-width: 549px) {
+  .Toolbar nav {
+    display: none;
+  }
 }
