--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,10 +1,8 @@
 .Button {
-    font-family: 'Architects Daughter', cursive;
     border: 0;
     margin: 0 .5rem;
-    border-radius: 2rem;
-    min-width: 2rem;
     padding: 0 1rem;
+    border-radius: 1rem;
     background-color: rgb(255, 152, 133);
     color: white;
     font-weight: bold;
@@ -18,5 +16,12 @@
     outline: none;
   }
   .Button:disabled {
-    opacity: .4;
+    opacity: .5;
+  }
+  
+  .green {
+    background-color: rgb(137, 255, 133);
+  }
+  .green:not(:disabled):hover {
+    background-color: rgb(49, 172, 0);
   }
