--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,5 +1,7 @@
-@media (max-width: 549px) {
     .Nav {
-      display: none;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
     }
-  }
+  
