--- a/src/components/Layout/Toolbar/Toolbar.module.css
+++ b/src/components/Layout/Toolbar/Toolbar.module.css
@@ -4,14 +4,15 @@
   position: sticky;
   top: 0;
   left: 0;
-
+padding: 0 1rem;
   font-size: 2rem;
   color: white;
   background-color: tomato;
   box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+  z-index: 1;
 }
 
-@media (max-width: 549px) {
+@media (max-width: 550px) {
   .Toolbar nav {
     display: none;
   }
