--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lexend&family=Train+One&display=swap');
 * {
-  font-family: 'Architects Daughter', cursive;
+  font-family: 'Lexend', sans-serif;
   box-sizing: border-box;
 }
 body {
