--- a/src/components/Layout/Drawer/Drawer.module.css
+++ b/src/components/Layout/Drawer/Drawer.module.css
@@ -1,27 +1,26 @@
 .Drawer .content {
+  background-color: rgb(109, 191, 211);
   width: 250px;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
-
-  font-size: 2rem;
-  color: white;
-  background-color: rgb(226, 123, 5);
   box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-  transition: transform .3s ease-out;
+  padding-top: .3rem;
+  padding-left: .1rem;
+  z-index: 1;
 }
 
 .open {
   transform: translateX(0);
 }
-.close {
+.closed {
   transform: translateX(-260px);
 }
 
 @media (min-width: 550px) {
-  .Drawer  {
+  .Drawer {
+    z-index: 1;
     display: none;
   }
 }
