--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,27 +1,24 @@
 .Button {
     border: 0;
     margin: 0 .5rem;
-    padding: 0 1rem;
-    border-radius: 1rem;
-    background-color: rgb(235, 22, 22);
+    border-radius: 2rem;
+    min-width: 2.5rem;
+    min-height: 2.5rem;
+    padding: 0 .7rem;
+    background-color: rgba(0, 0, 255, 0.452);
     color: white;
     font-weight: bold;
     font-size: 1.5rem;
     cursor: pointer;
+    transition: .4s;
+    box-shadow: 0 0 .5rem  pink;
   }
   .Button:not(:disabled):hover {
-    background-color: rgb(48, 7, 0);
+    background-color:blue;
   }
   .Button:focus {
     outline: none;
   }
   .Button:disabled {
-    opacity: .5;
-  }
-  
-  .green {
-    background-color: rgb(137, 255, 133);
-  }
-  .green:not(:disabled):hover {
-    background-color: rgb(49, 172, 0);
-  }
+    opacity: .6;
+  } 
