--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,18 +1,11 @@
 .content {
     position: fixed;
-    top: 15%;
-    left: 30%;
-    width: 40%;
-    background-color: white;
-    padding: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    transition: transform .3s ease-out;
     z-index: 1;
-  }
-  
-  @media (max-width: 800px) {
-    .content {
-      width: 80%;
-      left: 10%;
-    }
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+    width: 60%;
+    left: 20%;
+    top: 20%;
+    padding: 1rem 2rem;
+    transition: transform .3s ease-out;
   }
