--- a/src/components/Layout/Drawer/Drawer.module.css
+++ b/src/components/Layout/Drawer/Drawer.module.css
@@ -1,25 +1,27 @@
 .Drawer .content {
-  background-color: rgb(109, 191, 211);
   width: 250px;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-  padding-top: .3rem;
-  padding-left: .1rem;
   z-index: 1;
+
+  font-size: 2rem;
+  color: white;
+  background-color: tomato;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+  transition: transform .3s ease-out;
 }
 
 .open {
   transform: translateX(0);
 }
-.closed {
+.close {
   transform: translateX(-260px);
 }
 
 @media (min-width: 550px) {
-  .Drawer {
+  .Drawer  {
     display: none;
   }
 }
