--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-body{
-  font-family: cursive;
-  color: rgb(189, 189, 214);
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
+* {
+  font-family: 'Architects Daughter', cursive;
+  box-sizing: border-box;
+}
+body {
   margin: 0;
- background-size: auto;
 }
