--- a/src/components/PizzaBuilder/PizzaControls/PizzaControl/PizzaControl.module.css
+++ b/src/components/PizzaBuilder/PizzaControls/PizzaControl/PizzaControl.module.css
@@ -1,10 +1,7 @@
-.PizzaControl {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: .5rem 0;
-  }
-  .PizzaControl .ingredient div {
-    position: static;
-    margin: 0 .5rem;
-  }
+.PizzaControl{
+  display: flex;
+  justify-content: center;
+  
+  margin: .5rem 0;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
