--- a/src/components/PizzaBuilder/PizzaPreview/PizzaPreview.module.css
+++ b/src/components/PizzaBuilder/PizzaPreview/PizzaPreview.module.css
@@ -1,33 +1,48 @@
 .PizzaPreview {
-    flex: 0 0 400px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
-    justify-content: center;
-  }
-  .pizza {
-    width: 400px;
-    height: 400px;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 100%;
-    background-color: #fcc067;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .ingredients {
-    width: 380px;
-    height: 380px;
-    border-radius: 100%;
-    position: relative;
-  }
-  .price {
-    background-color: tomato;
-    border-radius: 1rem;
-    padding: 0 1rem;
-    font-size: 1.5rem;
-    color: white;
-    font-weight: bold;
-  }
+  flex: 0 0 410px;
+  display: flex;
+justify-content:center ;
+  flex-wrap: wrap;
+  margin-bottom: 1.5rem;
+  flex-direction: column;
+
+}
+
+.color{
+  border: solid black 0.1px;
+  border-radius: 30px  ;
+  padding:0 15px;
+  width: 410px;
+ min-height: 430px;
+  background-color: #dac384;
+  margin-bottom: 2rem;
+}
+.name{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-right: 30px;
+}
+
+.price {
+ background-color: #dac384;
+ margin: 0 auto;
+  border-radius: 1rem;
+  padding: 0 1rem;
+  font-size: 1.5rem;
+  color: black;
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+  width: 150px;
+  text-align: center;
+}
+a:focus {
+  outline: none;
+}
+.ingredients{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
