--- a/src/components/PizzaBuilder/PizzaBuilder.module.css
+++ b/src/components/PizzaBuilder/PizzaBuilder.module.css
@@ -1,19 +1,28 @@
 .Animal{
-  display: inline;
- width: 100%;height: 100%;
- 
- justify-content: center;
- flex-direction: row;
- flex-wrap: wrap;
- 
- }
- 
- .Animal{
-    display: flex;
- justify-content:space-evenly;
- 
- flex-wrap: wrap;
- flex-direction: row;
- 
-  margin: 0 auto;  
- }
+   display: inline;
+  width: 100%;height: 100%;
+  
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  }
+  
+  .Aimall{
+     display: flex;
+  justify-content:space-evenly;
+  
+  flex-wrap: wrap;
+  flex-direction: row;
+
+   margin: 0 auto;  
+  }
+
+
+
+
+
+
+
+
+
