--- a/src/components/Checkout/CheckoutSummary/CheckoutSummary.module.css
+++ b/src/components/Checkout/CheckoutSummary/CheckoutSummary.module.css
@@ -1,7 +1,7 @@
-.CheckoutSummary {
-  display: flex;
-  flex-direction: column;
-  width: 420px;
+.CheckoutSummary{
   margin: 0 auto;
-  text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
