--- a/src/components/Nav/NavItem/NavItem.module.css
+++ b/src/components/Nav/NavItem/NavItem.module.css
@@ -7,7 +7,7 @@
 }
 .NavItem a:hover {
   border-color: white;
-  background-color: rgb(236, 47, 14);
+  background-color: #95ac13;
 }
 .NavItem a:active,
 .NavItem a.active {
