--- a/src/components/PizzaBuilder/PizzaControls/PizzaControl/PizzaControl.module.css
+++ b/src/components/PizzaBuilder/PizzaControls/PizzaControl/PizzaControl.module.css
@@ -1,7 +1,7 @@
-.PizzaControl{
+.AnimalControl{
   display: flex;
   justify-content: center;
   
-  margin: .5rem 0;
+  margin: 1rem 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
