--- a/src/components/PizzaBuilder/OrderSummary/OrderSummary.module.css
+++ b/src/components/PizzaBuilder/OrderSummary/OrderSummary.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
-    
+    border-radius: 10px;
 }
 .div{
     text-align: center;
@@ -30,10 +30,4 @@
 }
 ul{
     list-style: none; 
-}
-li{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-strong{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
