--- a/src/components/Orders/Orders.module.css
+++ b/src/components/Orders/Orders.module.css
@@ -1,9 +1,9 @@
 .Orders{
-    background-color: #95ac13;
-    min-width: 150px;
+    background-color: #ff0707   ;
+    min-width: 100px;
     text-align: center;
     padding: 10px 50px;
-    border-radius: 15px;
+    border-radius: 25px;
     border: solid 2px  black;
     font-size: 20px;
 
