--- a/src/components/PizzaBuilder/OrderSummary/OrderSummary.module.css
+++ b/src/components/PizzaBuilder/OrderSummary/OrderSummary.module.css
@@ -11,7 +11,7 @@
 }
 .button1{
     border-radius: 10px;
-    background-color: #95ac13;
+    background-color: #ff0707;
     padding: 10px;
     font-size: 20px;
     font-weight: 800;
@@ -20,7 +20,7 @@
     margin-right: 50px;
 }
 .button2{
-    background-color: #95ac13   ;
+    background-color: #ff0707   ;
     width: 150px;
     padding: 10px;
     font-size: 20px;
