--- a/src/components/Nav/NavItem/NavItem.module.css
+++ b/src/components/Nav/NavItem/NavItem.module.css
@@ -7,7 +7,8 @@
 }
 .NavItem a:hover {
   border-color: white;
-  background-color: #95ac13;
+  background-color:  #ff0707   ;
+  ;
 }
 .NavItem a:active,
 .NavItem a.active {
