--- a/src/components/PizzaBuilder/PizzaPreview/PizzaPreview.module.css
+++ b/src/components/PizzaBuilder/PizzaPreview/PizzaPreview.module.css
@@ -13,7 +13,7 @@ justify-content:center ;
   padding:0 15px;
   width: 410px;
  min-height: 430px;
-  background-color: #95ac13;
+  background-color: #ff0707;
   margin-bottom: 2rem;
 }
 .name{
@@ -25,7 +25,7 @@ justify-content:center ;
 }
 
 .price {
- background-color: #95ac13;
+ background-color: #ff0707;
  margin: 0 auto;
   border-radius: 1rem;
   padding: 0 1rem;
