--- a/src/components/Checkout/CheckoutSummary/CheckoutForm/CheckoutForm.module.css
+++ b/src/components/Checkout/CheckoutSummary/CheckoutForm/CheckoutForm.module.css
@@ -1,22 +1,26 @@
-.ChacoutForm div{
-    padding: .3rem 1rem;
-}
-.ChacoutForm div > label{
-   font-size: 3.2rem;
+.CheckoutForm div{
+   padding: .3rem 1rem;  
+   }
+   
+   .CheckoutForm div > label{
+   font-size: 2.2rem;
    margin-right: 1rem;
    font-family: 'Quicksand', sans-serif;
-
-}
-.ChacoutForm div > label::after{
-  content: ":";
- }
- .ChacoutForm div > input{
-    font-size: 2.2rem;
-  border-radius: 5px;
-  border: 1px solid lightgray;
-  padding-left: 1rem;
- }
- .ChacoutForm div > input:focus {
- outline: none;
- border-color: gray;
- }
+   font-weight: 800;
+   }
+   
+   .CheckoutForm div > label::after{
+   content: ":";
+    }
+   
+    .CheckoutForm div > input{
+   font-size: 1.2rem;
+   border-radius: 5px;
+   border: 1px solid lightgray;
+   padding-left: 1rem;
+   }
+   
+   .CheckoutForm div > input:focus {
+    outline: none;
+    border-color: gray;
+    }
