--- a/src/components/Layout/Drawer/Drawer.module.css
+++ b/src/components/Layout/Drawer/Drawer.module.css
@@ -1,27 +1,27 @@
 .Drawer .content {
+  background-color:#dac384;
   width: 250px;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
-
-  font-size: 2rem;
-  color: white;
-  background-color: #ff0707 ;
   box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-  transition: transform .3s ease-out;
-}
-
-.open {
-  transform: translateX(0);
-}
-.close {
-  transform: translateX(-260px);
-}
-
-@media (min-width: 550px) {
-  .Drawer  {
-    display: none;
+  padding-top: .3rem;
+  padding-left: .1rem;
+  z-index: 1;
   }
-}
+  
+  .open {
+    transform: translateX(0);
+  }
+  
+  .closed {
+    transform: translateX(-260px);
+  }
+  
+  @media (min-width: 550px) {
+    .Drawer {
+      z-index: 1;
+      display: none;
+    }
+  }
