--- a/src/components/Layout/Drawer/DrawerOpen/DrawerOpen.module.css
+++ b/src/components/Layout/Drawer/DrawerOpen/DrawerOpen.module.css
@@ -1,23 +1,24 @@
 .DrawerOpen {
   height: 3rem;
-  padding: .5rem;
-  margin: .5rem;
+  padding: 1rem;
   display: flex;
   flex-flow: column;
   justify-content: center;
-  cursor: pointer;
-}
-.DrawerOpen > div {
+  margin-right: .5rem;
+  margin-top: 13px;
+  }
+  .DrawerOpen > div {
   height: 3px;
   width: 2rem;
   background-color: white;
-}
-.DrawerOpen > div:not(:last-child) {
-  margin-bottom: .5rem;
-}
-
-@media (min-width: 550px) {
-  .DrawerOpen {
-    display: none;
   }
-}
+  
+  .DrawerOpen > div:not(:last-child) {
+  margin-bottom: .5rem;
+  }
+  
+  @media (min-width: 560px) {
+    .DrawerOpen {
+      display: none;
+    }
+  }
