--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
-
-* {
-  font-family: 'Architects Daughter', cursive;
-  box-sizing: border-box;
-}
-body {
+  
+body{
+  font-family: 'Redressed', cursive;
   margin: 0;
+ width: 100%;height: 100%;
+background-repeat: no-repeat;
+background-size: cover;
+overflow-x:none ;
   background-image: url(./images/erasdf.jpg);
 }
