--- a/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
+++ b/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
@@ -1,47 +1,51 @@
 .FlowerPreview {
   flex: 0 0 410px;
   display: flex;
-justify-content:center ;
-  flex-wrap: wrap;
+  justify-content:center ;
+  flex-wrap: wrap-reverse;
   margin-bottom: 1.5rem;
   flex-direction: column;
-
-}
-
-.color{
+  }
+  
+  .color{
+  border: solid black 0.1px;
   border-radius: 30px  ;
-  padding:0 15px;
+  padding:0 20px;
   width: 410px;
- min-height: 430px;
-  background-color: #ff0707;
+  min-height: 430px;
+  background-color: #dac384;
   margin-bottom: 2rem;
-}
-.name{
+  }
+  
+  .name{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-right: 30px;
-}
-
-.price {
- background-color: #ff0707;
- margin: 0 auto;
+  }
+  
+  .price {
+  background-color: #dac384;
+  margin: 0 auto;
   border-radius: 1rem;
   padding: 0 1rem;
   font-size: 1.5rem;
-  color:white; 
+  color: black;
   font-family: 'Titillium Web', sans-serif;
   font-weight: bold;
   cursor: pointer;
   width: 150px;
   text-align: center;
-}
-a:focus {
+  }
+  
+  a:focus {
   outline: none;
-}
-.flowers{
+  }
+  
+  .ingredients{
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-}
+  }
+  
