--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-  
-body{
-  font-family: 'Redressed', cursive;
+
+* {
+  font-family: 'Architects Daughter', cursive;
+  box-sizing: border-box;
+}
+body {
   margin: 0;
- width: 100%;height: 100%;
-background-repeat: no-repeat;
-background-size: cover;
-overflow-x:none ;
   background-image: url(./images/erasdf.jpg);
 }
