new redux builder

--- a/src/components/Layout/Toolbar/Toolbar.module.css
+++ b/src/components/Layout/Toolbar/Toolbar.module.css
@@ -1,22 +1,18 @@
-.Toolbar {
+.Toolbar{
   display: flex;
-  justify-content: space-around;
-  position: sticky;
+  justify-content: space-between;
+  background-color:rgb(255, 0, 0);
+  padding: px;
   font-family: 'Redressed', cursive; 
-  top: 0;
-  left: 0;
-  padding: 0 1rem;
+  position: sticky;
+  top:0;
+  left:0;
+  box-shadow: 0 0  14px rgb(255, 0, 0);
+  
   z-index: 1;
-  font-size: 2rem;
-  width: 100%;
-  color: white;
-  background-color: #dac384;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    }
-    
-    @media (max-width: 560px) {
-      .Toolbar nav {
-        display: none;
-      }
-    }
-   
+}
+@media (max-width: 549px) {
+  .Toolbar nav {
+    display: none;
+  }
+}
