--- a/src/components/Layout/Drawer/Drawer.module.css
+++ b/src/components/Layout/Drawer/Drawer.module.css
@@ -1,5 +1,5 @@
 .Drawer .content {
-  background-color:#dac384;
+  background-color: white;
   width: 250px;
   height: 100%;
   position: fixed;
@@ -8,20 +8,19 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, .5);
   padding-top: .3rem;
   padding-left: .1rem;
-  z-index: 1;
-  }
+  z-index: 10;
   
-  .open {
-    transform: translateX(0);
+}
+
+.open {
+  transform: translateX(0);
+}
+.closed {
+  transform: translateX(-260px);
+}
+
+@media (min-width: 550px) {
+  .Drawer {
+    display: none;
   }
-  
-  .closed {
-    transform: translateX(-260px);
-  }
-  
-  @media (min-width: 550px) {
-    .Drawer {
-      z-index: 1;
-      display: none;
-    }
-  }
+}
