--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,3 +1,12 @@
 .Layout main {
-  padding: 1.5rem;
+  padding: 1rem;
+  transform: rotate(5rem);
+  color: rgb(255, 0, 0);
+  font-size: 1.3rem;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+ul{
+  list-style: none;
 }
