--- a/src/components/Nav/NavItem/NavItem.module.css
+++ b/src/components/Nav/NavItem/NavItem.module.css
@@ -1,18 +1,18 @@
 .NavItem a {
-  color: white;
+  color: rgb(88, 33, 33);
   border-bottom: 5px solid transparent;
   text-decoration: none;
   display: block;
-  padding: .5rem 1rem .35rem;
+  padding: 1rem ;
 }
 .NavItem a:hover {
-  border-color: white;
+  border-color: rgb(255, 255, 255);
   background-color:  #ff0707   ;
   ;
 }
 .NavItem a:active,
 .NavItem a.active {
-  border-color: white;
+  border-color: rgb(255, 255, 255);
 }
 
 @media (max-width: 549px) {
