--- a/src/components/PizzaBuilder/FlowersControls/FlowerControl/FlowerControl.module.css
+++ b/src/components/PizzaBuilder/FlowersControls/FlowerControl/FlowerControl.module.css
@@ -1,10 +1,23 @@
 .FlowerControl{
-  display: flex;
-  justify-content: center;
-  margin: .5rem 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: .5rem 0;
+    color: rgb(255, 255, 255);
+  text-shadow: 0 0 5px rgb(0, 217, 255);
+    font-size: 1.5rem;
+    font-weight: bold;
   }
-  
-  .Button:disabled{
-   opacity: .4;
+  @media (max-width:600px){
+    .FlowerControl{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: .5rem 0;
+      color: rgb(255, 255, 255);
+    text-shadow: 0 0 5px rgb(0, 217, 255);
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
   }
