--- a/src/components/Layout/Drawer/Drawer.module.css
+++ b/src/components/Layout/Drawer/Drawer.module.css
@@ -1,5 +1,5 @@
 .Drawer .content {
-  background-color: white;
+  background-color: rgb(255, 0, 0);
   width: 250px;
   height: 100%;
   position: fixed;
