--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -3,8 +3,8 @@
   align-items: center;
   text-shadow: 0 0 1rem blue;
   font-size: 28px;
-  color: blue;
-  text-shadow: 0 0 5px rgb(0, 217, 255);
+  color: rgb(255, 255, 255);
+  
   font-weight: bold;
 
   
