--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -4,9 +4,10 @@
   left: 30%;
   z-index: 1;
   width: 40%;
-  background-color: white;
+  background-color: #c21818;
+  
   padding: 1rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+  box-shadow: 0 0 10px rgb(255, 5, 5);
   transition: transform .3s ease-out;
 }
 
