--- a/src/components/Layout/Drawer/DrawerOpen/DrawerOpen.module.css
+++ b/src/components/Layout/Drawer/DrawerOpen/DrawerOpen.module.css
@@ -10,7 +10,8 @@
 .DrawerOpen > div {
   height: 3px;
   width: 2rem;
-  background-color: white;
+  background-color: rgb(236, 253, 0);
+  box-shadow: 0 0 20px black;
 }
 .DrawerOpen > div:not(:last-child) {
   margin-bottom: .5rem;
