--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,9 +1,9 @@
 .Logo{
   display: flex;
   align-items: center;
-  text-shadow: 0 0 1rem blue;
+  text-shadow: 0 0 20px black;
   font-size: 28px;
-  color: rgb(255, 255, 255);
+  color: rgb(236, 253, 0);
   
   font-weight: bold;
 
