--- a/src/components/Nav/NavItem/NavItem.module.css
+++ b/src/components/Nav/NavItem/NavItem.module.css
@@ -1,20 +1,20 @@
 .NavItem a {
-  color: rgb(255, 255, 255);
+  color: rgb(236, 253, 0);
   border-bottom: 5px solid transparent;
   text-decoration: none;
   display: block;
   padding: 1rem ;
-  text-shadow: 0 0 1rem blue;
+  text-shadow: 0 0 20px black;
   font-weight: bold;
 }
 .NavItem a:hover {
-  border-color: rgb(255, 255, 255);
+  border-color: rgb(236, 253, 0);
   background-color:  #ff0707   ;
   ;
 }
 .NavItem a:active,
 .NavItem a.active {
-  border-color: rgb(255, 255, 255);
+  border-color: rgb(236, 253, 0);
 }
 
 @media (max-width: 549px) {
