--- a/src/components/PizzaBuilder/FlowersControls/FlowerControls.module.css
+++ b/src/components/PizzaBuilder/FlowersControls/FlowerControls.module.css
@@ -1,28 +1,18 @@
 .FlowerControls{
-    margin: 0 10px;
+    margin: 0 20px;
     padding: 20px;
     width: 300px;
    height: 400px;
-    border-radius: 2rem;
+  border-radius: 2rem;
   text-align: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #ff0707;
-  color:white;
+  color:rgb(236, 253, 0);
   font-size: 2rem;
-  text-shadow: 0 0 5px rgb(0, 217, 255);
+  text-shadow: 0 0 20px black;
   box-shadow: 0 0 10px #ff0707;
-  
-  }
-  @media (max-width:600px){
-    .ToysControls{
-      width: 250px;
-      min-height: 250px;
-      background-color: white;
-      margin-bottom: 1rem;
-      box-shadow: 0 0 10px white;
-      border-radius: 2rem  ;
-      padding: 20px;
-      order: -1;
-    }
+  font-weight: bold;
+  margin-right: -25px;
+
   }
