--- a/src/components/PizzaBuilder/OrderSummary/OrderSummary.module.css
+++ b/src/components/PizzaBuilder/OrderSummary/OrderSummary.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
-    color: white;
+    color: rgb(236, 253, 0);
     background-color: #c91717; 
     }
     .div{
