--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -4,7 +4,7 @@
   padding: 0 1rem;
   border-radius: 1rem;
   background-color: rgb(255, 152, 133);
-  color: white;
+  color: rgb(236, 253, 0);
   font-weight: bold;
   font-size: 1.5rem;
   cursor: pointer;
