--- a/src/components/Checkout/CheckoutSummary/CheckoutForm/CheckoutForm.module.css
+++ b/src/components/Checkout/CheckoutSummary/CheckoutForm/CheckoutForm.module.css
@@ -5,12 +5,15 @@
    .CheckoutForm div > label{
    font-size: 2.2rem;
    margin-right: 1rem;
-   font-family: 'Quicksand', sans-serif;
+   text-shadow: 0 0 20px black;
    font-weight: 800;
+   color: rgb(236, 253, 0);
+   font-weight: bold;
    }
    
    .CheckoutForm div > label::after{
    content: ":";
+  
     }
    
     .CheckoutForm div > input{
