--- a/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
+++ b/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
@@ -11,14 +11,14 @@ margin: 0 20px;
   flex-direction: row;
 }
 .color{
-  width: 460px;
+  width: 400px;
   min-height: 400px;
   background-color:   #ff0707;;
   margin-bottom: 1rem;
   box-shadow: 0 0 10px #ff0707;
   border-radius: 2rem  ;
   padding: 20px;
- 
+ margin: 30px 0px;
 }
 
 .price {
