--- a/src/components/PizzaBuilder/FlowersControls/FlowerControl/FlowerControl.module.css
+++ b/src/components/PizzaBuilder/FlowersControls/FlowerControl/FlowerControl.module.css
@@ -16,7 +16,7 @@
       align-items: center;
       margin: .5rem 0;
       color: rgb(236, 253, 0);
-    text-shadow: 0 0 5px rgb(0, 217, 255);
+    text-shadow: 0 0 20px black;
       font-size: 1.2rem;
       font-weight: bold;
     }
