--- a/src/components/PizzaBuilder/FlowersControls/FlowerControls.module.css
+++ b/src/components/PizzaBuilder/FlowersControls/FlowerControls.module.css
@@ -1,6 +1,6 @@
 .FlowerControls{
-    margin: 0 20px;
-    padding: 20px;
+    margin: 30px 0px;
+    padding: 22px;
     width: 300px;
    height: 400px;
   border-radius: 2rem;
