--- a/src/components/Orders/Orders.module.css
+++ b/src/components/Orders/Orders.module.css
@@ -12,9 +12,10 @@ justify-content: center;
  min-height: 100px; 
  color: rgb(236, 253, 0);
  text-shadow: 0 0 20px black;
+ margin: 30px 0px;
 }
 ul{
-    margin-top: 50px;
+    margin-top:10px;
 }
 .Orders div{
  position: fixed;
