CheckoutForm in the color

--- a/src/components/Checkout/CheckoutSummary/CheckoutForm/CheckoutForm.module.css
+++ b/src/components/Checkout/CheckoutSummary/CheckoutForm/CheckoutForm.module.css
@@ -5,7 +5,7 @@
    .CheckoutForm div > label{
    font-size: 2.2rem;
    margin-right: 1rem;
-   text-shadow: 0 0 20px rgb(255, 255, 255);
+   text-shadow: 0 0 20px black;
    font-weight: 800;
    color: rgb(236, 253, 0);
    font-weight: bold;
