--- a/src/components/Layout/Drawer/Drawer.module.css
+++ b/src/components/Layout/Drawer/Drawer.module.css
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+  box-shadow: 0 0 10px rgba(255, 254, 254, 0.5);
   padding-top: .3rem;
   padding-left: .1rem;
   z-index: 10;
