Add remove price FlowerPreview

--- a/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
+++ b/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
@@ -28,7 +28,7 @@ margin: 0 20px;
   padding: 0 4rem;
   cursor: pointer;
   color:rgb(236, 253, 0);
-  text-shadow: 0 0 20px black;
+  text-shadow: 0 0 20px rgb(255, 251, 251);
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1rem;
