--- a/src/components/Layout/Toolbar/Toolbar.module.css
+++ b/src/components/Layout/Toolbar/Toolbar.module.css
@@ -7,7 +7,7 @@
   position: sticky;
   top:0;
   left:0;
-  box-shadow: 0 0  14px rgb(255, 0, 0);
+  box-shadow: 0 0 20px black;
   
   z-index: 1;
 }
