--- a/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
+++ b/src/components/PizzaBuilder/FlowerPreview/FlowerPreview.module.css
@@ -13,16 +13,16 @@ margin: 0 20px;
 .colors{
   width: 400px;
   min-height: 400px;
-  background-color:   #ff0707;;
+  background-color:   #ff0707;
   margin-bottom: 1rem;
-  box-shadow: 0 0 10px #ff0707;
+  box-shadow: 0 0 20px black;
   border-radius: 2rem  ;
   padding: 20px;
  margin: 30px 0px;
 }
 
 .price {
-  box-shadow: 0 0 10px #ff0707;
+  box-shadow: 0 0 20px black;
  background-color:  #ff0707;;
   border-radius: 2.5rem;
   padding: 0 4rem;
@@ -42,13 +42,13 @@ a:focus {
     min-height: 300px;
     background-color: #ff0707;
     margin-bottom: 1rem;
-    box-shadow: 0 0 10px #ff0707;
+    box-shadow: 0 0 20px black;
     border-radius: 2rem  ;
     padding: 20px;
    
   }
   .price {
-    box-shadow: 0 0 10px #ff0707;
+    box-shadow: 0 0 20px black;
    background-color: #ff0707;
     border-radius: 2.5rem;
     padding: 0 2rem;
