--- a/src/components/PizzaBuilder/FlowersControls/FlowerControls.module.css
+++ b/src/components/PizzaBuilder/FlowersControls/FlowerControls.module.css
@@ -11,7 +11,7 @@
   color:rgb(236, 253, 0);
   font-size: 2rem;
   text-shadow: 0 0 20px black;
-  box-shadow: 0 0 10px #ff0707;
+  box-shadow: 0 0 20px black;
   font-weight: bold;
   margin-right: -25px;
 
