--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -23,18 +23,21 @@ box-shadow: 0 0 20px black;
 
 
 input{margin-top: 10px;
-height: 20px;border-radius: 5px;padding: 10px 20px;margin-right: 15px;}
+height: 20px;
+border-radius: 5px;
+padding: 10px 10px;
+margin-right: 10px;}
 
 .color button{
     margin-right: 10px;
     margin-top: 10px;
     padding: 10px 15px;
-    width: 80px;
+    width: 100px;
     border: none;
 font-size: 35px;
     border-radius: 35px;
     font-family: 'Bebas Neue', cursive;
-   background-color: green;color: white;
+   background-color: rgb(13, 194, 13);color: yellow;
     font-size: 1rem;
 }
 .Auth h1{
